--- a/index.html
+++ b/index.html
@@ -6,6 +6,24 @@
     <title>Influencer Gear Website</title>
 </head>
 <body>
-    
+    <header>
+<div class="header-section">
+    <div>
+<h3>Influencer products</h3>
+    </div>
+    <div>
+        <li>Home</li>
+        <li>Projects</li>
+        <li>Sign up</li>
+        <li>Log in</li>
+        <li></li>
+        <li></li>
+        
+    </div>
+</div>
+    </header>
+
+
+
 </body>
 </html>
