--- a/index.html
+++ b/index.html
@@ -4,14 +4,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Influencer Gear Website</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+<link rel="stylesheet" href="/styles/style.css">
+
+
 </head>
 <body>
     <header>
 <div class="header-section">
     <div>
-<h3>Influencer products</h3>
+        <h3>Influencer products</h3>
     </div>
-    <div>
+    <nav class="menu">
         <li>Home</li>
         <li>Projects</li>
         <li>Sign up</li>
@@ -19,10 +25,25 @@
         <li></li>
         <li></li>
         
-    </div>
+    </nav>
 </div>
     </header>
+<section class="hero-section">
+<div class="hero-title">
+    <h2 class="title">
+        Start your Journey as <br>Influencer
+    </h2>
+    <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.
+    </p>
+    <button>Preebook now</button>
+</div>
 
+<div class="hero-right">
+<img class="hero-image" src="./images/main-camera.png" alt="">
+</div>
+
+</section>
 
 
 </body>
