header section and hero section done with responsive

--- a/index.html
+++ b/index.html
@@ -28,23 +28,27 @@
     </nav>
 </div>
     </header>
+<!-- navigation end -->
+
+<!-- header with hero section start -->
 <section class="hero-section">
 <div class="hero-title">
     <h2 class="title">
         Start your Journey as <br>Influencer
     </h2>
     <p>
-        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem vestibulum sed scelerisque eros. Lectus faucibus.
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sem <br>
+         vestibulum sed scelerisque eros. Lectus faucibus.
     </p>
-    <button>Preebook now</button>
+    <div class ="btn1"><button class="prebook">Preebook now</button></div>
 </div>
 
 <div class="hero-right">
-<img class="hero-image" src="./images/main-camera.png" alt="">
+<img class="hero-image" src="./images/main-camera.png" alt="" width="250px">
 </div>
 
 </section>
-
+<!-- header with hero section end -->
 
 </body>
 </html>
