--- a/index.html
+++ b/index.html
@@ -50,5 +50,84 @@
 </section>
 <!-- header with hero section end -->
 
+<!-- company logo section start -->
+
+<div class="company-logo-section">
+    <img src="./logos/Alibaba.svg" alt="" class="company-logo">
+    <img src="./logos/Amazon.svg" alt="" class="company-logo">
+    <img src="./logos/Daraz.pk Logo.svg" alt="" class="company-logo">
+    <img src="./logos/Ebay.svg" alt="" class="company-logo">
+    <img src="./logos/Rakuten.svg" alt="" class="company-logo">
+    <img src="./logos/Walmart.svg" alt="" class="company-logo">
+    <img src="./logos/Target.svg" alt="" class="company-logo">
+</div>
+
+<!-- company logo section end -->
+
+<div>
+    <h3 class="popular">Popular Collection</h3>
+</div>
+<!-- 1st 3 card section -->
+<div class="cards3-1st-parent">
+            <div class="card-left">
+                <img src="./images/tripod.png" alt="" class="product-image">
+                <h3 class="product-title">Flex Tripod</h3>
+                <h4 class="price">$50.48</h4>
+                <p>Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+
+            </div>
+            <div class="card-left">
+                <img src="./images/mic.png" alt="" class="product-image">
+                <h3 class="product-title">microphone</h3>
+                <h4 class="price">$120.25</h4>
+                <p>Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+
+            </div>
+
+            <div class="card-left">
+                <img src="./images/airpod.png" alt="" class="product-image">
+                <h3 class="product-title">Airbuds</h3>
+                <h4 class="price">$100.00</h4>
+                <p>Wordwide shifting <br> available <br>
+                    Buyers protection possible!</p>
+
+            </div>
+
+</div>
+<br>
+<!-- 2nd 3 card section -->
+<div class="cards3-1st-parent">
+    <div class="card-left">
+        <img src="./images/tripod.png" alt="" class="product-image">
+        <h3 class="product-title">Flex Tripod</h3>
+        <h4 class="price">$50.48</h4>
+        <p>Wordwide shifting <br> available <br>
+            Buyers protection possible!</p>
+
+    </div>
+    <div class="card-left">
+        <img src="./images/mic.png" alt="" class="product-image">
+        <h3 class="product-title">microphone</h3>
+        <h4 class="price">$120.25</h4>
+        <p>Wordwide shifting <br> available <br>
+            Buyers protection possible!</p>
+
+    </div>
+
+    <div class="card-left">
+        <img src="./images/airpod.png" alt="" class="product-image">
+        <h3 class="product-title">Airbuds</h3>
+        <h4 class="price">$100.00</h4>
+        <p>Wordwide shifting <br> available <br>
+            Buyers protection possible!</p>
+
+    </div>
+
+</div>
+
+
+
 </body>
 </html>
