--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 </div>
 <!-- 1st 3 card section -->
 <div class="cards3-1st-parent">
-            <div class="card-left">
+            <div class="card-child">
                 <img src="./images/tripod.png" alt="" class="product-image">
                 <h3 class="product-title">Flex Tripod</h3>
                 <h4 class="price">$50.48</h4>
@@ -77,7 +77,7 @@
                     Buyers protection possible!</p>
 
             </div>
-            <div class="card-left">
+            <div class="card-child">
                 <img src="./images/mic.png" alt="" class="product-image">
                 <h3 class="product-title">microphone</h3>
                 <h4 class="price">$120.25</h4>
@@ -86,7 +86,7 @@
 
             </div>
 
-            <div class="card-left">
+            <div class="card-child">
                 <img src="./images/airpod.png" alt="" class="product-image">
                 <h3 class="product-title">Airbuds</h3>
                 <h4 class="price">$100.00</h4>
@@ -99,34 +99,86 @@
 <br>
 <!-- 2nd 3 card section -->
 <div class="cards3-1st-parent">
-    <div class="card-left">
-        <img src="./images/tripod.png" alt="" class="product-image">
-        <h3 class="product-title">Flex Tripod</h3>
-        <h4 class="price">$50.48</h4>
+    <div class="card-child">
+        <img src="./images/drone.png" alt="" class="product-image">
+        <h3 class="product-title">Drone</h3>
+        <h4 class="price">$980.48</h4>
         <p>Wordwide shifting <br> available <br>
             Buyers protection possible!</p>
 
     </div>
-    <div class="card-left">
-        <img src="./images/mic.png" alt="" class="product-image">
-        <h3 class="product-title">microphone</h3>
-        <h4 class="price">$120.25</h4>
+    <div class="card-child">
+        <img src="./images/lights.png" alt="" class="product-image">
+        <h3 class="product-title">Light Setup</h3>
+        <h4 class="price">$1200.00</h4>
         <p>Wordwide shifting <br> available <br>
             Buyers protection possible!</p>
 
     </div>
 
-    <div class="card-left">
-        <img src="./images/airpod.png" alt="" class="product-image">
-        <h3 class="product-title">Airbuds</h3>
-        <h4 class="price">$100.00</h4>
+    <div class="card-child">
+        <img src="./images/setup.png" alt="" class="product-image">
+        <h3 class="product-title">Photoshoot set</h3>
+        <h4 class="price">$820.40</h4>
         <p>Wordwide shifting <br> available <br>
             Buyers protection possible!</p>
 
     </div>
 
 </div>
+<br>
+<!-- 3rd 3 cards section -->
+<div class="cards3-1st-parent">
+    <div class="card-child">
+        <img src="./images/action.png" alt="" class="product-image">
+        <h3 class="product-title">Vlogging Camera</h3>
+        <h4 class="price">$1800.80</h4>
+        <p>Wordwide shifting <br> available <br>
+            Buyers protection possible!</p>
 
+    </div>
+    <div class="card-child">
+        <img src="./images/single-light.png" alt="" class="product-image">
+        <h3 class="product-title">Green Screen</h3>
+        <h4 class="price">$25.40</h4>
+        <p>Wordwide shifting <br> available <br>
+            Buyers protection possible!</p>
+
+    </div>
+
+    <div class="card-child">
+        <img src="./images/camera.png" alt="" class="product-image">
+        <h3 class="product-title">Action Camera</h3>
+        <h4 class="price">$380.50</h4>
+        <p>Wordwide shifting <br> available <br>
+            Buyers protection possible!</p>
+
+        </div>
+</div>
+
+<!-- see more -->
+<div class="seemore">
+    <h3> See More</h3>
+</div>
+<!-- feature product -->
+<div class="feature-product-parent">
+    <div class="feature-left-child">
+        <img src="./images/gear.png" alt="">
+    </div>
+
+    <div class="feature-right-child">
+            <h2 class="title">
+                Featured products at one place
+            </h2>
+            <p>
+                Amet minim mollit non deserunt ullamco est sit aliqua dolor <br>
+                 do amet sint. Velit officia consequat duis enim velit mollit. <br>
+                  Exercitation veniam consequat sunt nostrud amet.
+            </p>
+            <div class ="btn1"><button class="prebook">Join Now</button></div>
+    </div>
+
+</div>
 
 
 </body>
