feature section done

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600;700;800&display=swap" rel="stylesheet">
-<link rel="stylesheet" href="/styles/style.css">
+<link rel="stylesheet" href="./styles/style.css">
 
 
 </head>
@@ -163,11 +163,11 @@
 <!-- feature product -->
 <div class="feature-product-parent">
     <div class="feature-left-child">
-        <img src="./images/gear.png" alt="">
+        <img src="./images/gear.png" alt="" class="feature-image">
     </div>
 
     <div class="feature-right-child">
-            <h2 class="title">
+            <h2 class="title-feature">
                 Featured products at one place
             </h2>
             <p>
@@ -177,9 +177,20 @@
             </p>
             <div class ="btn1"><button class="prebook">Join Now</button></div>
     </div>
-
 </div>
+<!-- footer section -->
 
+<footer>
+    <div>
+        <h4></h4>
+        <p></p>
+    </div>
+
+    <div>
+
+    </div>
+
+</footer>
 
 </body>
 </html>
